--- a/css/quizstyle.css
+++ b/css/quizstyle.css
@@ -1,8 +1,30 @@
 body {
-  text-align: center;
   background-color: #05052F;
+  margin: 0;
+  text-align: center;
 }
 
+/*SKT Title and Logo*/
+.Title {
+  text-align: center;
+  color: darkorange;
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  font-size: 25px;
+  font-weight: 100;
+  margin: auto;
+}
+.SK {
+  color: #F03D3D;
+  font-size: 30px;
+  font-weight: bold;
+}
+header {
+  background-color: white;
+  width: 100%;
+  height: 200px;
+}
+
+/*Heading*/
 h1 {
   text-align: center;
   background-color: white;
@@ -92,4 +114,30 @@ h1 {
 #next:hover,
 #mark:hover{
   background-color: lightgray;
+}
+
+/* Navigation Bar */
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: white;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: #05052F;
+  font-family: Tahoma, Geneva, sans-serif;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: lightgrey;
 }
