--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -4,7 +4,7 @@ body {
   text-align: center;
 }
 
-/*SKT Title and Logo*/
+/*SK telecom*/
 .Title {
   text-align: center;
   color: darkorange;
@@ -18,6 +18,8 @@ body {
   font-size: 30px;
   font-weight: bold;
 }
+
+/*white header*/
 div {
   background-color: white;
   text-align: center;
@@ -53,7 +55,7 @@ h2 {
   font-size: 20px;
 }
 
-.center {
+.logo {
   text-align: center;
   margin: auto;
 }
