--- a/css/quizstyle.css
+++ b/css/quizstyle.css
@@ -4,7 +4,7 @@ body {
   text-align: center;
 }
 
-/*SKT Title and Logo*/
+/*SK telecom*/
 .Title {
   text-align: center;
   color: darkorange;
@@ -18,6 +18,14 @@ body {
   font-size: 30px;
   font-weight: bold;
 }
+
+/*Logo*/
+.logo {
+  text-align: center;
+  margin: auto;
+}
+
+/*white header*/
 header {
   background-color: white;
   width: 100%;
@@ -29,7 +37,7 @@ h1 {
   text-align: center;
   background-color: white;
   color: #CC0000;
-  margin: 20px auto;
+  margin: 25px auto;
   width: 300px;
   padding: 10px 10px;
   border-radius: 25px;
@@ -64,7 +72,7 @@ h1 {
 #next {
   position: absolute;
   margin-left: 60px;
-  top: 820px;
+  top: 1080px;
   background-color: white;
   border-style: solid;
   border-width: 3px;
@@ -74,7 +82,8 @@ h1 {
 
 #prev {
   position: absolute;
-  top: 820px;
+  top: 1080px;
+  margin: auto;
   background-color: white;
   border-style: solid;
   border-width: 3px;
@@ -84,7 +93,8 @@ h1 {
 
 #mark {
   position: absolute;
-  top: 860px;
+  top: 1120px;
+  margin: auto;
   background-color: white;
   border-style: solid;
   border-width: 3px;
